reference/3.0/readme.md
---
description:  
manager:  carmonm
ms.topic:  reference
author:  jpjofre
ms.prod:  powershell
keywords:  powershell,cmdlet
ms.date:  2016-12-12
title:  readme
ms.technology:  powershell
---

# Windows PowerShell 3.0

- Updated: October, 2016
- Applies To: Windows PowerShell 2.0
, Windows PowerShell 3.0

This section contains the cmdlet help, provider help,
and conceptual ("About") help topics for the modules that are installed with Windows PowerShell version 3.0, by default.

The table below shows the latest published version number of the Help for each module.
The Help is available through the links below, or as Updatable Help files.
Updatable Help was introduced with Windows PowerShell 3.0 and enables you to have the latest Help topics available locally on your computer.
See about_Updatable_Help for more information.


Module | Latest Version
------ | --------------
[ISE](ISE/ISE.md) | 3.1.0.0
[Microsoft.PowerShell.Core](Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md) | 3.3.0.0
[Microsoft.PowerShell.Diagnostics](Microsoft.PowerShell.Diagnostics\Microsoft.PowerShell.Diagnostics.md) | 3.1.0.0
[Microsoft.PowerShell.Host](Microsoft.PowerShell.Host/Microsoft.PowerShell.Host.md) | 3.1.0.0
[Microsoft.PowerShell.Management](Microsoft.PowerShell.Management/Microsoft.PowerShell.Management.md) | 3.2.0.0
[Microsoft.PowerShell.Security](Microsoft.PowerShell.Security/Microsoft.PowerShell.Security.md) | 3.1.0.0
[Microsoft.PowerShell.Utility](Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md) | 3.3.0.0
[Microsoft.WSMan.Management](Microsoft.WSMan.Management/Microsoft.WSMan.Management.md) | 3.2.0.0
[PSScheduledJob](PSScheduledJob/PSScheduledJob.md) | 3.3.0.0
[PSWorkflow](PSWorkflow/PSWorkflow.md) | 3.4.0.0
[PSWorkflowUtility](PSWorkflowUtility/PSWorkflowUtility.md) | 3.3.0.0

##  See Also
###  Concepts
Windows PowerShell Core About Topics

###  Other Resources
Windows PowerShell
Windows PowerShell Core
Windows PowerShell Core Cmdlet Help Topics
Windows PowerShell Core Provider Help Topics

