reference/5.0/readme.md
# Windows PowerShell 5.0

- Updated: October, 2016
- Applies To: Windows PowerShell 2.0
, Windows PowerShell 3.0
, Windows PowerShell 4.0
, Windows PowerShell 5.0

This section contains the cmdlet help, provider help,
and conceptual ("About") help topics for the modules that are installed with Windows PowerShell version 5.0, by default.

The table below shows the latest published version number of the Help for each module.
The Help is available through the links below, or as Updatable Help files.
Updatable Help was introduced with Windows PowerShell 3.0 and enables you to have the latest Help topics available locally on your computer.
See about_Updatable_Help for more information.

Title and link to Web version | Latest Version
----------------------------- | --------------
[ISE](ISE/ISE.md) |5.0.1.0
[Microsoft.PowerShell.Archive](Microsoft.PowerShell.Archive/Microsoft.PowerShell.Archive.md) |5.0.1.0
[Microsoft.PowerShell.Core](Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md) |5.0.1.0
[Microsoft.PowerShell.Diagnostics](Microsoft.PowerShell.Diagnostics/Microsoft.PowerShell.Diagnostics.md) |5.0.1.0
[Microsoft.PowerShell.Host](Microsoft.PowerShell.Host/Microsoft.PowerShell.Host.md) |5.0.1.0
[Microsoft.PowerShell.LocalAccounts](Microsoft.PowerShell.LocalAccounts/Microsoft.PowerShell.LocalAccounts.md) |5.0.1.0
[Microsoft.PowerShell.Management](Microsoft.PowerShell.Management/Microsoft.PowerShell.Management.md) |5.0.1.0
[Microsoft.PowerShell.ODataUtils](Microsoft.PowerShell.ODataUtils/Microsoft.PowerShell.ODataUtils.md) |5.0.1.0
[Microsoft.PowerShell.Security](Microsoft.PowerShell.Security/Microsoft.PowerShell.Security.md) |5.0.1.0
[Microsoft.PowerShell.Utility](Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md) |5.0.1.0
[Microsoft.WSMan.Management](Microsoft.WSMan.Management/Microsoft.WSMan.Management.md) |5.0.1.0
[PackageManagement](PackageManagement/PackageManagement.md) |5.0.1.0
[PowerShellGet](PowerShellGet/PowerShellGet.md) |5.0.1.0
[PSDesiredStateConfiguration](PSDesiredStateConfiguration/PSDesiredStateConfiguration.md) |5.0.1.0
[PSReadline](PSReadline/PSReadline.md) |5.0.1.0
[PSScheduledJob](PSScheduledJob/PSScheduledJob.md) |5.0.1.0
[PSScriptAnalyzer](PSScriptAnalyzer/PSScriptAnalyzer.md) |5.0.1.0
[PSWorkflow](PSWorkflow/PSWorkflow.md) |5.0.1.0
[PSWorkflowUtility](PSWorkflowUtility/PSWorkflowUtility.md) |5.0.1.0


##  See Also
###  Concepts
Windows PowerShell Core About Topics

###  Other Resources
Windows PowerShell
Windows PowerShell Core
Windows PowerShell Core Cmdlet Help Topics
Windows PowerShell Core Provider Help Topics
